changed to real names

--- a/static/index.html
+++ b/static/index.html
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <div id="footer">
-                <div>Made with love by French Fry, Chicken Wang, Broccolee, and Tilted.<br>HackTJ 2016</div>
+                <div>Made with love by Alex Fried, Varun Iyengar, Alyssa Lee, and Alex Wang.<br>HackTJ 2016</div>
             </div>
         </div> 
     </body>
